testing/tests/ui/block_in_filter_block.stderr
error: cannot have a block inside a filter block
 --> BlockInFilter.html:7:10
       " block title %}New title{% endblock %}\n        a b\n    {% endfilter %}\n{%- endblock body %}\n"
 --> tests/ui/block_in_filter_block.rs:5:5
  |
5 |     source = r#"{% extends "html-base.html" %}
  |     ^^^^^^
